--- a/project/res/values-da/strings.xml
+++ b/project/res/values-da/strings.xml
@@ -118,6 +118,8 @@
     <string name="trip_bucket_book_hotel">Reserver hotel</string>
     <!-- Tablet Trip bucket, sold out text -->
     <string name="trip_bucket_sold_out">Udsolgt</string>
+    <!-- Tablet Trip bucket, expired text -->
+    <string name="trip_bucket_expired">Udløbet</string>
     <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
     <string name="trip_bucket_label_flight_roundtrip">Returrejse med fly til %1$s</string>
     <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
@@ -134,6 +136,8 @@
     <string name="when_to_fly">Udrejse</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Hjemrejse</string>
+    <!-- (GDE) Flight fare message when no flight data is available -->
+    <string name="gde_no_flight_data">Ingen anbefalede datoer tilgængelige.</string>
     <!-- Search one way flight -->
     <string name="search_one_way_flight">Søg efter enkeltbilletter</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -287,7 +291,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Returrejse</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">Samlet pris inkl. skat</string>
+    <string name="total_with_tax">Samlet beløb</string>
 
     <!-- Tablet hotel trip bucket -->
     <!-- Progress dialog text while creating a trip -->
@@ -364,6 +368,10 @@
     <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;Overnat i&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">Vi beklager, men vi kan ikke oprette forbindelse.</string>
+    <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
+    <string name="network_unavailable">Netværk ikke tilgængeligt</string>
+    <!-- Tablet. Error message when the device is not connected to internet/network unavailable. -->
+    <string name="error_network_unavailable">Opret forbindelse til Wi-Fi eller et mobildatanetværk for at fortsætte</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">Rejser</string>
     <!-- Menu option for going to see your trips/itineraries -->
@@ -1027,6 +1035,8 @@
     <string name="taking_off_soon">Så er der snart afgang…</string>
     <!-- Text for screen when in an invalid POS we can't search for yet -->
     <string name="invalid_flights_pos">Vi beklager, men flyreservation via mobilen er endnu ikke tilgængelig, hvor du befinder dig.</string>
+    <!-- (Tablet) Text for screen when in a POS which only supports dropdown flight suggestions -->
+    <string name="tablet_drop_down_flight_pos_unavailable">Vi beklager, men app\&apos;en kan ikke vise flyrejser for din region. Men du kan se dem på &lt;a href=\"%1$s\"&gt;vores hjemmeside&lt;/a&gt;!</string>
     <!-- Error message when we the user picks the same airport for both the departure and arrival airports -->
     <string name="error_same_flight_departure_arrival">Afrejse- og hjemrejselufthavne skal være forskellige.</string>
 
@@ -1162,7 +1172,7 @@
     <!-- Stored Payment label -->
     <string name="stored_payment_label">Vælg en gemt betalingsmetode</string>
     <!-- Payment Method -->
-    <string name="payment_method">Betalingsmetode</string>
+    <string name="payment_method">Betalingsoplysninger</string>
     <!-- Billing Address -->
     <string name="billing_address">Faktureringsadresse</string>
     <!-- Card Info -->
@@ -1300,7 +1310,7 @@
     <!-- Enter travler info button text -->
     <string name="enter_traveler_info">Oplysninger om rejsende</string>
     <!-- Traveler Details (for flights) -->
-    <string name="traveler_details">Oplysninger om rejsende</string>
+    <string name="traveler_details">Oplysninger om den primære rejsende</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">Oplysninger om gæst</string>
     <!-- Add traveler number template -->
@@ -1312,9 +1322,13 @@
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
     <string name="add_child_with_age_TEMPLATE">Oplysninger for barn på %1$s</string>
     <!-- Add infant in lap traveler number template -->
-    <string name="add_infant_in_lap_number_TEMPLATE">Oplysninger for spædbarn på skødet %1$s</string>
+    <string name="add_infant_in_lap_number_TEMPLATE">Oplysninger for spædbarn %1$s på skødet</string>
+    <!-- Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap">Oplysninger for spædbarn på skødet</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">Oplysninger for spædbarn med eget sæde %1$s</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">Oplysninger for spædbarn %1$s på eget sæde</string>
+    <!-- Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat">Oplysninger for spædbarn på eget sæde</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Boarding kan nægtes, hvis den rejsendes navn ikke stemmer overens med det officielle billed-id.</string>
 
@@ -1587,6 +1601,8 @@
     <string name="error_flight_price_decreased_with_fee">Det lader til, at flyselskabet opkræver et betalingsgebyr på %1$s, men vi har lige fundet dine ønskede flybilletter på udsalg, hvor du kan spare %2$s. Vil du gerne betale det nye samlede beløb på %3$s?</string>
     <!-- Error shown to user if their credit card number is invalid -->
     <string name="error_invalid_card_number">Du har indtastet et ugyldigt kortnummer. Prøv venligst igen.</string>
+    <!-- Error shown to user if their name on card is invalid -->
+    <string name="error_name_on_card_mismatch">Det indtastede navn på kortholderen stemmer ikke overens med navnet på kreditkortet. Forsøg venligst igen.</string>
     <!-- Error shown to user if their credit card has expired -->
     <string name="error_expired_payment">Det kreditkort, du forsøgte at anvende, er udløbet. Forsøg venligst med et andet kreditkort.</string>
     <!-- Error shown to user if they attempt to book with an individual under 18 which is unsupported -->
@@ -1599,6 +1615,10 @@
     <string name="error_flight_no_longer_available">Vi beklager meget, men dit fly er ikke længere tilgængeligt.</string>
     <!-- Error shown to user if one of multiple flights is no longer available (sold out, session expired, whatever) -->
     <string name="error_flights_no_longer_available">Vi beklager meget, men et af dine fly er ikke længere tilgængeligt.</string>
+    <!-- Error shown to user if their flight is no longer available or expired -->
+    <string name="error_flight_hold_expired">Vi beklager, men din forhåndsreservation af denne flyrejse er udløbet.</string>
+    <!-- Error shown to user if one of multiple flights is no longer available or expired -->
+    <string name="error_flights_hold_expired">Vi beklager, men din forhåndsreservation af disse flyrejser er udløbet.</string>
     <!-- Button label imploring users to pick a new flight due to unavailability -->
     <string name="pick_new_flight">Vælg et nyt fly</string>
     <!-- Button label imploring users to pick flights due to unavailability -->
@@ -2163,10 +2183,12 @@
     <string name="CheckOut">Udtjekning</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Rabat</string>
+    <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
+    <string name="unknown">Ukendt</string>
 
     <!-- Expedia policy strings -->
     <!-- Policy displayed to user when an immediate charge is required -->
-    <string name="PolicyImmediateChargeRequired">Det fulde beløb for reservationen vil blive trukket fra dit kreditkort i reservationsøjeblikket.</string>
+    <string name="PolicyImmediateChargeRequired">Det fulde beløb for reservationen vil blive trukket fra dit kreditkort på reservationstidspunktet.</string>
     <!-- Policy displayed to user when the room is non-refundable -->
     <string name="PolicyNonRefundable">Vi tilbyder en exceptionel lav pris på dette hotel. For at kunne det kan vi ikke gøre prisen refunderbar. Hvis du vælger at annullere denne reservation, vil du ikke få beløbet refunderet.</string>
     <!-- Policy displayed to user when a deposit is required -->
@@ -3114,6 +3136,8 @@
     <string name="tablet_sold_out_remove_hotel">Fjern hotel</string>
     <!-- Button text to select another hotel -->
     <string name="tablet_sold_out_select_hotel">Vælg et andet hotel</string>
+    <!-- Button text to select another hotel or room -->
+    <string name="tablet_sold_out_select_hotel_room">Vælg et andet hotel eller værelse</string>
     <!-- Header text to indicating flight sold out -->
     <string name="tablet_sold_out_summary_text_flight">Denne flyrejse er nu udsolgt. Beklager!</string>
     <!-- Button text to remove sold flight -->
