--- a/project/res/values-ja/strings.xml
+++ b/project/res/values-ja/strings.xml
@@ -118,6 +118,8 @@
     <string name="trip_bucket_book_hotel">ホテルを予約</string>
     <!-- Tablet Trip bucket, sold out text -->
     <string name="trip_bucket_sold_out">満席</string>
+    <!-- Tablet Trip bucket, expired text -->
+    <string name="trip_bucket_expired">に期限切れ</string>
     <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
     <string name="trip_bucket_label_flight_roundtrip">%1$sへの往復フライト</string>
     <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
@@ -134,6 +136,8 @@
     <string name="when_to_fly">出発日</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">現地出発日</string>
+    <!-- (GDE) Flight fare message when no flight data is available -->
+    <string name="gde_no_flight_data">おすすめの日付はありません。</string>
     <!-- Search one way flight -->
     <string name="search_one_way_flight">片道フライトを検索</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -287,7 +291,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">往復</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">税込合計</string>
+    <string name="total_with_tax">合計</string>
 
     <!-- Tablet hotel trip bucket -->
     <!-- Progress dialog text while creating a trip -->
@@ -364,6 +368,10 @@
     <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;&lt;font color="#b2b2b2"&gt;ホテル&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">接続できません。</string>
+    <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
+    <string name="network_unavailable">ネットワーク使用不可</string>
+    <!-- Tablet. Error message when the device is not connected to internet/network unavailable. -->
+    <string name="error_network_unavailable">継続するには、Wi-Fi またはモバイルデータ通信ネットワークに接続してください</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">予約確認</string>
     <!-- Menu option for going to see your trips/itineraries -->
@@ -1027,6 +1035,8 @@
     <string name="taking_off_soon">近日リリース予定…</string>
     <!-- Text for screen when in an invalid POS we can't search for yet -->
     <string name="invalid_flights_pos">モバイルフライト予約は、お客様のロケーションではまだご利用いただけません。</string>
+    <!-- (Tablet) Text for screen when in a POS which only supports dropdown flight suggestions -->
+    <string name="tablet_drop_down_flight_pos_unavailable">申し訳ございませんが、アプリではお客様の地域のフライトを表示できません。&lt;a href=\"%1$s\"&gt;Web サイト&lt;/a&gt;ではご覧いただけます !</string>
     <!-- Error message when we the user picks the same airport for both the departure and arrival airports -->
     <string name="error_same_flight_departure_arrival">出発と到着にはそれぞれ別の空港を指定してください。</string>
 
@@ -1162,7 +1172,7 @@
     <!-- Stored Payment label -->
     <string name="stored_payment_label">保存されたお支払い方法を選択する</string>
     <!-- Payment Method -->
-    <string name="payment_method">お支払い方法</string>
+    <string name="payment_method">支払い情報の詳細</string>
     <!-- Billing Address -->
     <string name="billing_address">クレジットカード登録住所</string>
     <!-- Card Info -->
@@ -1268,7 +1278,7 @@
     <!-- Payment -->
     <string name="payment">お支払い</string>
     <!-- Enter Payment Information -->
-    <string name="enter_payment_information">お支払い情報を入力</string>
+    <string name="enter_payment_information">支払い情報を入力</string>
 
 
     <!-- Hotel Traveler Info Options Activity -->
@@ -1300,7 +1310,7 @@
     <!-- Enter travler info button text -->
     <string name="enter_traveler_info">旅行者情報</string>
     <!-- Traveler Details (for flights) -->
-    <string name="traveler_details">旅行者の詳細</string>
+    <string name="traveler_details">代表者の詳細</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">ゲストの詳細</string>
     <!-- Add traveler number template -->
@@ -1313,8 +1323,12 @@
     <string name="add_child_with_age_TEMPLATE">%1$s 才のお子様の詳細</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">膝抱きの乳幼児 %1$s の詳細</string>
+    <!-- Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap">膝抱きの乳幼児の詳細</string>
     <!-- Add infant in seat traveler number template -->
     <string name="add_infant_in_seat_number_TEMPLATE">座席が必要な乳幼児 %1$s の詳細</string>
+    <!-- Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat">座席が必要な乳幼児の詳細</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">旅行者名がパスポートなど写真付きの公的証明書に記載された名前と一致しない場合は搭乗できません。</string>
 
@@ -1587,6 +1601,8 @@
     <string name="error_flight_price_decreased_with_fee">クレジットカード手数料として %1$s が航空会社から請求されましたが、%2$s 安く提供できるフライトがあります。新しい料金は %3$s です。この金額でよろしいですか ?</string>
     <!-- Error shown to user if their credit card number is invalid -->
     <string name="error_invalid_card_number">入力されたクレジットカード番号は無効です。再度入力してください。</string>
+    <!-- Error shown to user if their name on card is invalid -->
+    <string name="error_name_on_card_mismatch">入力したクレジットカード名義人がクレジットカードに記載された名前と異なります。もう一度お試しください。</string>
     <!-- Error shown to user if their credit card has expired -->
     <string name="error_expired_payment">入力されたクレジットカードの有効期限が過ぎています。別のクレジットカードをご利用ください。</string>
     <!-- Error shown to user if they attempt to book with an individual under 18 which is unsupported -->
@@ -1599,6 +1615,10 @@
     <string name="error_flight_no_longer_available">大変申し訳ございませんが、ご希望のフライトはすでに満席となっています。</string>
     <!-- Error shown to user if one of multiple flights is no longer available (sold out, session expired, whatever) -->
     <string name="error_flights_no_longer_available">大変申し訳ございませんが、ご希望のフライトの一部がすでに満席となっています。</string>
+    <!-- Error shown to user if their flight is no longer available or expired -->
+    <string name="error_flight_hold_expired">申し訳ございません。保留中のフライトが無効になりました。</string>
+    <!-- Error shown to user if one of multiple flights is no longer available or expired -->
+    <string name="error_flights_hold_expired">申し訳ございません。保留中のフライトが無効になりました。</string>
     <!-- Button label imploring users to pick a new flight due to unavailability -->
     <string name="pick_new_flight">新しいフライトを選択する</string>
     <!-- Button label imploring users to pick flights due to unavailability -->
@@ -2020,11 +2040,11 @@
     -->
     <string name="user_review_name_and_location_signature">%1$s ～ %2$s</string>
     <!-- User review no critical reviews -->
-    <string name="user_review_no_critical_reviews">このホテルのネガティブなレビューはまだありません</string>
+    <string name="user_review_no_critical_reviews">このホテルのネガティブなレビューはまだありません.</string>
     <!-- User review no favorable reviews -->
-    <string name="user_review_no_favorable_reviews">このホテルのポジティブなレビューはまだありません</string>
+    <string name="user_review_no_favorable_reviews">このホテルのポジティブなレビューはまだありません.</string>
     <!-- User review no recent reviews -->
-    <string name="user_review_no_recent_reviews">このホテルの最近のレビューはありません</string>
+    <string name="user_review_no_recent_reviews">このホテルの最近のレビューはありません.</string>
 
     <!-- User reviews server/parsing error -->
     <string name="user_review_unavailable">レビューは現在ご覧いただけません</string>
@@ -2163,6 +2183,8 @@
     <string name="CheckOut">チェックアウト</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">割引</string>
+    <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
+    <string name="unknown">不明</string>
 
     <!-- Expedia policy strings -->
     <!-- Policy displayed to user when an immediate charge is required -->
@@ -2232,7 +2254,7 @@
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">申し訳ありません。このクーポン コードは無効です。</string>
     <!-- Error when applying coupon - the coupon has expired -->
-    <string name="coupon_error_expired">申し訳ありません。このクーポンの有効期限が過ぎています.</string>
+    <string name="coupon_error_expired">申し訳ありません。クーポンの有効期限が過ぎています.</string>
     <!-- Error when applying coupon - we're having some problems internally and can't handle the coupon -->
     <string name="coupon_error_not_redeemed">申し訳ありません。エラーが発生しました。もう一度お試しください。</string>
     <!-- Error when applying coupon - the coupon has already been used by this user -->
@@ -3114,6 +3136,8 @@
     <string name="tablet_sold_out_remove_hotel">ホテルを削除</string>
     <!-- Button text to select another hotel -->
     <string name="tablet_sold_out_select_hotel">他のホテルを選択</string>
+    <!-- Button text to select another hotel or room -->
+    <string name="tablet_sold_out_select_hotel_room">他のホテルまたは客室を選択</string>
     <!-- Header text to indicating flight sold out -->
     <string name="tablet_sold_out_summary_text_flight">このフライトは現在満席となっています。申し訳ありません</string>
     <!-- Button text to remove sold flight -->
