--- a/project/res/values-nl/strings.xml
+++ b/project/res/values-nl/strings.xml
@@ -118,6 +118,8 @@
     <string name="trip_bucket_book_hotel">Boek hotel</string>
     <!-- Tablet Trip bucket, sold out text -->
     <string name="trip_bucket_sold_out">Uitverkocht</string>
+    <!-- Tablet Trip bucket, expired text -->
+    <string name="trip_bucket_expired">Vervallen</string>
     <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
     <string name="trip_bucket_label_flight_roundtrip">Retourvlucht naar %1$s</string>
     <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
@@ -134,6 +136,8 @@
     <string name="when_to_fly">Vluchtdatums</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Terugvluchten</string>
+    <!-- (GDE) Flight fare message when no flight data is available -->
+    <string name="gde_no_flight_data">Geen datumaanbevelingen beschikbaar.</string>
     <!-- Search one way flight -->
     <string name="search_one_way_flight">Enkele vluchten zoeken</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -287,7 +291,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Retourreis</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">Totaal, incl. belastingen</string>
+    <string name="total_with_tax">Totaal</string>
 
     <!-- Tablet hotel trip bucket -->
     <!-- Progress dialog text while creating a trip -->
@@ -364,6 +368,10 @@
     <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;Verblijf in&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">Helaas, we kunnen geen verbinding maken</string>
+    <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
+    <string name="network_unavailable">Netwerk niet beschikbaar</string>
+    <!-- Tablet. Error message when the device is not connected to internet/network unavailable. -->
+    <string name="error_network_unavailable">Maak verbinding met WiFi- of mobiel datanetwerk om verder te gaan</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">Reizen</string>
     <!-- Menu option for going to see your trips/itineraries -->
@@ -1027,6 +1035,8 @@
     <string name="taking_off_soon">Bijna klaar voor vertrek…</string>
     <!-- Text for screen when in an invalid POS we can't search for yet -->
     <string name="invalid_flights_pos">Het spijt ons, vluchtboekingen via je mobiele toestel is in jouw locatie nog niet beschikbaar.</string>
+    <!-- (Tablet) Text for screen when in a POS which only supports dropdown flight suggestions -->
+    <string name="tablet_drop_down_flight_pos_unavailable">Helaas, maar de app kan geen vluchten voor jouw regio tonen. Geen nood, je vindt ze op &lt;a href=\"%1$s\"&gt;onze website&lt;/a&gt;!</string>
     <!-- Error message when we the user picks the same airport for both the departure and arrival airports -->
     <string name="error_same_flight_departure_arrival">De luchthavens van vertrek en aankomst moeten verschillen.</string>
 
@@ -1154,7 +1164,7 @@
     <!-- Select Payment -->
     <string name="select_payment">Kies betaalmethode</string>
     <!-- Select payment sentence case -->
-    <string name="select_payment_sentence_case">Betaalinfo</string>
+    <string name="select_payment_sentence_case">Betalingsinfo</string>
     <!-- Add new card -->
     <string name="add_new_card">Nieuwe creditcard toevoegen</string>
     <!-- Overview button -->
@@ -1162,7 +1172,7 @@
     <!-- Stored Payment label -->
     <string name="stored_payment_label">Kies een opgeslagen betaalmethode</string>
     <!-- Payment Method -->
-    <string name="payment_method">Betaling</string>
+    <string name="payment_method">Betalingsinfo</string>
     <!-- Billing Address -->
     <string name="billing_address">Factuuradres</string>
     <!-- Card Info -->
@@ -1268,14 +1278,14 @@
     <!-- Payment -->
     <string name="payment">Betaling</string>
     <!-- Enter Payment Information -->
-    <string name="enter_payment_information">Voer betalingsgegevens in</string>
+    <string name="enter_payment_information">Voer betalingsinfo in</string>
 
 
     <!-- Hotel Traveler Info Options Activity -->
     <!-- Done menu item -->
     <string name="menu_done">Gereed</string>
     <!-- unable to load traveler details message -->
-    <string name="unable_to_load_traveler_message">We konden deze reizigersgegevens niet laden. Controleer je netwerkverbinding en probeer opnieuw.</string>
+    <string name="unable_to_load_traveler_message">We konden deze reizigersinfo niet laden. Controleer je netwerkverbinding en probeer opnieuw.</string>
 
     <!-- Cost breakdown dialog -->
     <!-- Cost Summary -->
@@ -1300,21 +1310,25 @@
     <!-- Enter travler info button text -->
     <string name="enter_traveler_info">Reizigersinformatie</string>
     <!-- Traveler Details (for flights) -->
-    <string name="traveler_details">Reizigersinfo</string>
+    <string name="traveler_details">Info hoofdreiziger</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">Gastinfo</string>
     <!-- Add traveler number template -->
     <string name="add_traveler_number_TEMPLATE">Info reiziger %1$s</string>
     <!-- Add adult traveler number template -->
-    <string name="add_adult_number_TEMPLATE">Volwassene %1$s gegevens</string>
+    <string name="add_adult_number_TEMPLATE">Info volwassene %1$s</string>
     <!-- Add child traveler number template -->
-    <string name="add_child_number_TEMPLATE">Kind %1$s gegevens</string>
+    <string name="add_child_number_TEMPLATE">Info kind %1$s</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
-    <string name="add_child_with_age_TEMPLATE">Info over kind van %1$s</string>
+    <string name="add_child_with_age_TEMPLATE">Info kind van %1$s jaar</string>
     <!-- Add infant in lap traveler number template -->
-    <string name="add_infant_in_lap_number_TEMPLATE">Info over baby op schoot %1$s</string>
+    <string name="add_infant_in_lap_number_TEMPLATE">Info baby op schoot %1$s</string>
+    <!-- Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap">Info baby op schoot</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">Info over baby op stoel %1$s</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">Info baby op stoel %1$s</string>
+    <!-- Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat">Info baby op stoel</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Mogelijk wordt toegang tot het vliegtuig geweigerd als de naam van de reiziger niet overeenstemt met die op het identiteitsbewijs.</string>
 
@@ -1587,6 +1601,8 @@
     <string name="error_flight_price_decreased_with_fee">Het lijkt erop dat de airline een betalingstoeslag van %1$s in rekening brengt maar dat je aangevraagde vluchten net worden aangeboden voor %2$s minder. Ga je akkoord met het nieuwe totaalbedrag van %3$s?</string>
     <!-- Error shown to user if their credit card number is invalid -->
     <string name="error_invalid_card_number">Het ingevoerde creditcardnummer is ongeldig, probeer het opnieuw.</string>
+    <!-- Error shown to user if their name on card is invalid -->
+    <string name="error_name_on_card_mismatch">De ingevoerde naam van de kaarthouder stemt niet overeen met de naam op de creditcard. Probeer het opnieuw.</string>
     <!-- Error shown to user if their credit card has expired -->
     <string name="error_expired_payment">De creditcard die je wil gebruiken is verlopen, gebruik een nieuwe creditcard.</string>
     <!-- Error shown to user if they attempt to book with an individual under 18 which is unsupported -->
@@ -1599,6 +1615,10 @@
     <string name="error_flight_no_longer_available">Het spijt ons, je vlucht is niet meer beschikbaar.</string>
     <!-- Error shown to user if one of multiple flights is no longer available (sold out, session expired, whatever) -->
     <string name="error_flights_no_longer_available">Het spijt ons, een van je vluchten is niet meer beschikbaar.</string>
+    <!-- Error shown to user if their flight is no longer available or expired -->
+    <string name="error_flight_hold_expired">Sorry, maar je reservering voor deze vlucht is vervallen.</string>
+    <!-- Error shown to user if one of multiple flights is no longer available or expired -->
+    <string name="error_flights_hold_expired">Je reservering voor deze vluchten is verlopen.</string>
     <!-- Button label imploring users to pick a new flight due to unavailability -->
     <string name="pick_new_flight">Kies een nieuwe vlucht</string>
     <!-- Button label imploring users to pick flights due to unavailability -->
@@ -2163,6 +2183,8 @@
     <string name="CheckOut">Check-out</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Korting</string>
+    <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
+    <string name="unknown">Onbekend</string>
 
     <!-- Expedia policy strings -->
     <!-- Policy displayed to user when an immediate charge is required -->
@@ -3114,6 +3136,8 @@
     <string name="tablet_sold_out_remove_hotel">Hotel verwijderen</string>
     <!-- Button text to select another hotel -->
     <string name="tablet_sold_out_select_hotel">Ander hotel kiezen</string>
+    <!-- Button text to select another hotel or room -->
+    <string name="tablet_sold_out_select_hotel_room">Kies een ander hotel of kamer</string>
     <!-- Header text to indicating flight sold out -->
     <string name="tablet_sold_out_summary_text_flight">Deze vlucht is nu uitverkocht op onze app. Sorry!</string>
     <!-- Button text to remove sold flight -->
