--- a/project/res/values-sv/strings.xml
+++ b/project/res/values-sv/strings.xml
@@ -118,6 +118,8 @@
     <string name="trip_bucket_book_hotel">Boka hotell</string>
     <!-- Tablet Trip bucket, sold out text -->
     <string name="trip_bucket_sold_out">Slutsålt</string>
+    <!-- Tablet Trip bucket, expired text -->
+    <string name="trip_bucket_expired">Gick ut</string>
     <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
     <string name="trip_bucket_label_flight_roundtrip">Tur- och returflyg till %1$s</string>
     <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
@@ -134,6 +136,8 @@
     <string name="when_to_fly">Avresa</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Hemresa</string>
+    <!-- (GDE) Flight fare message when no flight data is available -->
+    <string name="gde_no_flight_data">Inga datumrekommendationer tillgängliga.</string>
     <!-- Search one way flight -->
     <string name="search_one_way_flight">Sök efter enkelresor</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -287,7 +291,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Tur och retur</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">Totalt med skatter</string>
+    <string name="total_with_tax">Totalt</string>
 
     <!-- Tablet hotel trip bucket -->
     <!-- Progress dialog text while creating a trip -->
@@ -364,6 +368,10 @@
     <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;Bo i&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">Tyvärr kan vi inte ansluta.</string>
+    <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
+    <string name="network_unavailable">Nätverk otillgängligt</string>
+    <!-- Tablet. Error message when the device is not connected to internet/network unavailable. -->
+    <string name="error_network_unavailable">Anslut till wi-fi eller annat nätverk för att fortsätta</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">Resor</string>
     <!-- Menu option for going to see your trips/itineraries -->
@@ -1027,6 +1035,8 @@
     <string name="taking_off_soon">Lyfter snart…</string>
     <!-- Text for screen when in an invalid POS we can't search for yet -->
     <string name="invalid_flights_pos">Flygbokning via mobil är tyvärr inte tillgängligt där du befinner dig än.</string>
+    <!-- (Tablet) Text for screen when in a POS which only supports dropdown flight suggestions -->
+    <string name="tablet_drop_down_flight_pos_unavailable">Tyvärr kan inte appen visa flyg för din region. Men du kan se dem på &lt;a href=\"%1$s\"&gt;vår hemsida&lt;/a&gt;!</string>
     <!-- Error message when we the user picks the same airport for both the departure and arrival airports -->
     <string name="error_same_flight_departure_arrival">Avgångs- och ankomstflygplats kan inte vara densamma.</string>
 
@@ -1154,7 +1164,7 @@
     <!-- Select Payment -->
     <string name="select_payment">Välj betalning</string>
     <!-- Select payment sentence case -->
-    <string name="select_payment_sentence_case">Betalningsinformation</string>
+    <string name="select_payment_sentence_case">Betalningsuppgifter</string>
     <!-- Add new card -->
     <string name="add_new_card">Lägg till nytt kort</string>
     <!-- Overview button -->
@@ -1162,7 +1172,7 @@
     <!-- Stored Payment label -->
     <string name="stored_payment_label">Välj sparad betalningsmetod</string>
     <!-- Payment Method -->
-    <string name="payment_method">Betalningsmetod</string>
+    <string name="payment_method">Betalningsuppgifter</string>
     <!-- Billing Address -->
     <string name="billing_address">Faktureringsadress</string>
     <!-- Card Info -->
@@ -1268,7 +1278,7 @@
     <!-- Payment -->
     <string name="payment">Betalning</string>
     <!-- Enter Payment Information -->
-    <string name="enter_payment_information">Ange betalningsinformation</string>
+    <string name="enter_payment_information">Ange betalningsuppgifter</string>
 
 
     <!-- Hotel Traveler Info Options Activity -->
@@ -1300,7 +1310,7 @@
     <!-- Enter travler info button text -->
     <string name="enter_traveler_info">Resenärens uppgifter</string>
     <!-- Traveler Details (for flights) -->
-    <string name="traveler_details">Resenärsinformation</string>
+    <string name="traveler_details">Huvudresenärens uppgifter</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">Gästinformation</string>
     <!-- Add traveler number template -->
@@ -1312,9 +1322,13 @@
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
     <string name="add_child_with_age_TEMPLATE">Info om %1$s-åring</string>
     <!-- Add infant in lap traveler number template -->
-    <string name="add_infant_in_lap_number_TEMPLATE">Info om spädbarn %1$s i vuxens knä</string>
+    <string name="add_infant_in_lap_number_TEMPLATE">Info om spädbarn %1$s i knä</string>
+    <!-- Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap">Info om spädbarn i knä</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">Info om barnresenär %1$s i säte</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">Info om spädbarn %1$s i säte</string>
+    <!-- Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat">Info om spädbarn i säte</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Passagerare kan nekas ombordstigning om namnet i bokningen inte matchar namnet i den statligt utfärdade ID-handlingen</string>
 
@@ -1587,6 +1601,8 @@
     <string name="error_flight_price_decreased_with_fee">Det verkar som att flygbolaget tar ut en betalningsavgift på %1$s, men vi hittade dina flyg på rea för %2$s mindre. Är du villig att betala det nya totalbeloppet på %3$s?</string>
     <!-- Error shown to user if their credit card number is invalid -->
     <string name="error_invalid_card_number">Kreditkortsnumret som du angav är ogiltigt, försök igen.</string>
+    <!-- Error shown to user if their name on card is invalid -->
+    <string name="error_name_on_card_mismatch">Kortinnehavarens namn som angavs matchar inte namnet på kreditkortet. Försök igen.</string>
     <!-- Error shown to user if their credit card has expired -->
     <string name="error_expired_payment">Kreditkortet du försökte använda har gått ut. Försök med ett annat kreditkort.</string>
     <!-- Error shown to user if they attempt to book with an individual under 18 which is unsupported -->
@@ -1599,6 +1615,10 @@
     <string name="error_flight_no_longer_available">Vi ber om ursäkt, tyvärr är inte ditt flyg tillgängligt längre.</string>
     <!-- Error shown to user if one of multiple flights is no longer available (sold out, session expired, whatever) -->
     <string name="error_flights_no_longer_available">Vi ber om ursäkt, tyvärr är ett av dina flyg inte tillgängligt längre.</string>
+    <!-- Error shown to user if their flight is no longer available or expired -->
+    <string name="error_flight_hold_expired">Flyget kunde tyvärr bara hållas åt dig en viss tid och tidsfristen har nu löpt ut.</string>
+    <!-- Error shown to user if one of multiple flights is no longer available or expired -->
+    <string name="error_flights_hold_expired">Flygen kunde tyvärr bara hållas åt dig en viss tid och tidsfristen har nu löpt ut.</string>
     <!-- Button label imploring users to pick a new flight due to unavailability -->
     <string name="pick_new_flight">Välj ett nytt flyg</string>
     <!-- Button label imploring users to pick flights due to unavailability -->
@@ -2163,6 +2183,8 @@
     <string name="CheckOut">Utcheckning</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Rabatt</string>
+    <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
+    <string name="unknown">Okänt</string>
 
     <!-- Expedia policy strings -->
     <!-- Policy displayed to user when an immediate charge is required -->
@@ -3114,6 +3136,8 @@
     <string name="tablet_sold_out_remove_hotel">Ta bort hotell</string>
     <!-- Button text to select another hotel -->
     <string name="tablet_sold_out_select_hotel">Välj ett annat hotell</string>
+    <!-- Button text to select another hotel or room -->
+    <string name="tablet_sold_out_select_hotel_room">Välj ett annat hotell eller rum</string>
     <!-- Header text to indicating flight sold out -->
     <string name="tablet_sold_out_summary_text_flight">Tyvärr är det här flyget nu slutsålt.</string>
     <!-- Button text to remove sold flight -->
