--- a/project/res/values-th/strings.xml
+++ b/project/res/values-th/strings.xml
@@ -118,6 +118,8 @@
     <string name="trip_bucket_book_hotel">จองโรงแรม</string>
     <!-- Tablet Trip bucket, sold out text -->
     <string name="trip_bucket_sold_out">หมดแล้ว</string>
+    <!-- Tablet Trip bucket, expired text -->
+    <string name="trip_bucket_expired">หมดอายุ</string>
     <!-- Tablet Trip bucket Flight text - Round Trip. %1$s <destination city> -->
     <string name="trip_bucket_label_flight_roundtrip">เที่ยวบินไป-กลับไปยัง%1$s</string>
     <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
@@ -134,6 +136,8 @@
     <string name="when_to_fly">ต้องการบินเมื่อไหร่</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">ต้องการกลับเมื่อไหร่</string>
+    <!-- (GDE) Flight fare message when no flight data is available -->
+    <string name="gde_no_flight_data">ไม่มีคำแนะนำวันที่พร้อมให้บริการ</string>
     <!-- Search one way flight -->
     <string name="search_one_way_flight">ค้นหาเที่ยวบินแบบเที่ยวเดียว</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
@@ -289,7 +293,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">ไป-กลับ</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">ราคารวมภาษี</string>
+    <string name="total_with_tax">ยอดรวม</string>
 
     <!-- Tablet hotel trip bucket -->
     <!-- Progress dialog text while creating a trip -->
@@ -366,6 +370,10 @@
     <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;เข้าพักใน&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">ขออภัย ไม่สามารถเชื่อมต่อได้</string>
+    <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
+    <string name="network_unavailable">เครือข่ายไม่พร้อมใช้งาน</string>
+    <!-- Tablet. Error message when the device is not connected to internet/network unavailable. -->
+    <string name="error_network_unavailable">เชื่อมต่อกับเครือข่าย Wi-Fi หรือเครือข่ายข้อมูลมือถือเพื่อดำเนินการต่อ</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">การเดินทาง</string>
     <!-- Menu option for going to see your trips/itineraries -->
@@ -1029,6 +1037,8 @@
     <string name="taking_off_soon">เครื่องกำลังจะออกในอีกไม่ช้า…</string>
     <!-- Text for screen when in an invalid POS we can't search for yet -->
     <string name="invalid_flights_pos">ขออภัย การจองเที่ยวบินทางมือถือยังไม่มีให้บริการในพื้นที่ของคุณ</string>
+    <!-- (Tablet) Text for screen when in a POS which only supports dropdown flight suggestions -->
+    <string name="tablet_drop_down_flight_pos_unavailable">ขออภัย แอพไม่สามารถแสดงเที่ยวบินสำหรับภูมิภาคของคุณ แต่คุณสามารถดูเที่ยวบินบน&lt;a href=\"%1$s\"&gt;เว็บไซต์ของเรา&lt;/a&gt;ได้!</string>
     <!-- Error message when we the user picks the same airport for both the departure and arrival airports -->
     <string name="error_same_flight_departure_arrival">สนามบินที่ออกเดินทางกับสนามบินปลายทางต้องไม่ใช่สนามบินเดียวกัน</string>
 
@@ -1164,7 +1174,7 @@
     <!-- Stored Payment label -->
     <string name="stored_payment_label">เลือกวิธีการชำระเงินที่จัดเก็บไว้</string>
     <!-- Payment Method -->
-    <string name="payment_method">วิธีการชำระเงิน</string>
+    <string name="payment_method">รายละเอียดการชำระเงิน</string>
     <!-- Billing Address -->
     <string name="billing_address">ที่อยู่สำหรับจัดส่งใบเรียกเก็บเงิน</string>
     <!-- Card Info -->
@@ -1270,7 +1280,7 @@
     <!-- Payment -->
     <string name="payment">การชำระเงิน</string>
     <!-- Enter Payment Information -->
-    <string name="enter_payment_information">ป้อนข้อมูลการชำระเงิน</string>
+    <string name="enter_payment_information">ป้อนรายละเอียดการชำระเงิน</string>
 
 
     <!-- Hotel Traveler Info Options Activity -->
@@ -1302,7 +1312,7 @@
     <!-- Enter travler info button text -->
     <string name="enter_traveler_info">ข้อมูลผู้เดินทาง</string>
     <!-- Traveler Details (for flights) -->
-    <string name="traveler_details">รายละเอียดผู้เดินทาง</string>
+    <string name="traveler_details">รายละเอียดของผู้เดินทางหลัก</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">รายละเอียดผู้เข้าพัก</string>
     <!-- Add traveler number template -->
@@ -1314,9 +1324,13 @@
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
     <string name="add_child_with_age_TEMPLATE">รายละเอียดอายุ%1$s</string>
     <!-- Add infant in lap traveler number template -->
-    <string name="add_infant_in_lap_number_TEMPLATE">รายละเอียดทารกนั่งตัก %1$s</string>
+    <string name="add_infant_in_lap_number_TEMPLATE">รายละเอียดทารกนั่งตัก%1$s</string>
+    <!-- Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap">รายละเอียดทารกนั่งตัก</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">รายละเอียดทารกนั่งที่นั่ง %1$s</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">รายละเอียดทารกนั่งที่นั่ง%1$s</string>
+    <!-- Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat">รายละเอียดทารกนั่งที่นั่ง</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">สายการบินอาจปฏิเสธการขึ้นเครื่องหากชื่อผู้เดินทางไม่ตรงกับบัตรประจำตัวที่มีรูปถ่ายที่ทางราชการออกให้</string>
 
@@ -1589,6 +1603,8 @@
     <string name="error_flight_price_decreased_with_fee">ดูเหมือนว่าสายการบินจะเก็บค่าธรรมเนียมการชำระเงินคุณอีก %1$s แต่เราเพิ่งพบเที่ยวบินที่คุณต้องการในราคาที่ถูกกว่า %2$s คุณต้องการที่จะชำระเงินจำนวน %3$s ซึ่งเป็นยอดรวมใหม่นี้หรือไม่</string>
     <!-- Error shown to user if their credit card number is invalid -->
     <string name="error_invalid_card_number">ข้อมูลบัตรเครดิตไม่ถูกต้อง โปรดลองอีกครั้ง</string>
+    <!-- Error shown to user if their name on card is invalid -->
+    <string name="error_name_on_card_mismatch">ชื่อผู้ถือบัตรที่คุณได้ป้อนไว้ไม่ตรงกับชื่อบนบัตรเครดิต โปรดลองอีกครั้ง</string>
     <!-- Error shown to user if their credit card has expired -->
     <string name="error_expired_payment">บัตรเครดิตที่คุณจะใช้นั้นหมดอายุแล้ว โปรดใช้บัตรใบอื่น</string>
     <!-- Error shown to user if they attempt to book with an individual under 18 which is unsupported -->
@@ -1601,6 +1617,10 @@
     <string name="error_flight_no_longer_available">ขออภัย เที่ยวบินของคุณไม่มีให้บริการแล้ว</string>
     <!-- Error shown to user if one of multiple flights is no longer available (sold out, session expired, whatever) -->
     <string name="error_flights_no_longer_available">ขออภัย หนึ่งในเที่ยวบินของคุณไม่มีให้บริการแล้ว</string>
+    <!-- Error shown to user if their flight is no longer available or expired -->
+    <string name="error_flight_hold_expired">ขออภัย เที่ยวบินที่คุณเลือกไว้หมดเวลาแล้ว</string>
+    <!-- Error shown to user if one of multiple flights is no longer available or expired -->
+    <string name="error_flights_hold_expired">ขออภัย เที่ยวบินเหล่านี้ที่คุณเลือกไว้หมดเวลาแล้ว</string>
     <!-- Button label imploring users to pick a new flight due to unavailability -->
     <string name="pick_new_flight">เลือกเที่ยวบินใหม่</string>
     <!-- Button label imploring users to pick flights due to unavailability -->
@@ -2165,6 +2185,8 @@
     <string name="CheckOut">เช็คเอาท์</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">ส่วนลด</string>
+    <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
+    <string name="unknown">ไม่ทราบ</string>
 
     <!-- Expedia policy strings -->
     <!-- Policy displayed to user when an immediate charge is required -->
@@ -3116,6 +3138,8 @@
     <string name="tablet_sold_out_remove_hotel">นำโรงแรมออก</string>
     <!-- Button text to select another hotel -->
     <string name="tablet_sold_out_select_hotel">เลือกโรงแรมใหม่</string>
+    <!-- Button text to select another hotel or room -->
+    <string name="tablet_sold_out_select_hotel_room">เลือกโรงแรมอื่นหรือห้องใหม่</string>
     <!-- Header text to indicating flight sold out -->
     <string name="tablet_sold_out_summary_text_flight">ขออภัย เที่ยวบินนี้ขายหมดแล้ว</string>
     <!-- Button text to remove sold flight -->
